# minimind-v

./: .envrc  .gitignore  1-pretrain_vlm.py  2-sft_multi_vlm.py  2-sft_vlm.py  3-eval_chat.py  3-eval_chat_multi.py  4-sft_multi_vlm.py  5-eval_chat_multi.py  MIGRATION_SUMMARY.md  README.md  README_en.md  eval_dpo_driving.py  eval_dpo_report.txt  eval_t2i.py  eval_videolm.py  eval_vlm.py  export_model.py  full.json  index.html  mkdocs.yml  pyproject.toml  rag_demo_index.faiss  rag_demo_index.json  requirements.txt  train_pretrain_t2i.py  train_pretrain_videolm.py  train_pretrain_vlm.py  train_sft_t2i.py  train_sft_vlm.py  trans_json.py  web_demo_vlm.py  web_server.py
dataset/: driving_preferences.jsonl  get_pretrain_t2i_data.py  lm_dataset.py
docs/: index.md  quickstart.md  training.md
model/: LMConfig.py  VLMConfig.py  dataset.py  model.py  model_init.md  model_t2i.py  model_videolm.py  model_vlm.py  model_vq.py  vision_utils.py  vq_demo.py
model/clip_model/: README.md
model/siglip_model/: README.md
model/vision_model/: README.md
rag/: __init__.py  rag_vlm.py  retriever.py  vector_store.py
scripts/: build_knowledge_base.py  convert_vlm.py  demo_rag.py  generate_driving_preferences.py  pretrain_vlm.sh  sft_vlm.sh  web_demo_vlm.py
trainer/: lora_utils.py  train_dpo_driving.py  train_pretrain_vlm.py  train_sft_vlm.py  train_sft_vlm_lora.py  trainer_utils.py
